<resources>
    <string name="app_name">Money Tracker</string>
    <string name="full_app_name">Money Tracker</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="error">Có lỗi xảy ra.</string>
    <string name="notice_dialog">Thông báo</string>
    <string name="yes">Có</string>
    <string name="no">Không</string>
    <string name="info_detail">Thông tin chi tiết</string>
    <string name="see_trans">Danh sách giao dịch</string>
    <string name="overview">Tổng quan</string>
    <string name="expenses">Khoản thu/chi</string>
    <string name="expensess">Khoản chi</string>
    <string name="savinged">Khoản tiết kiệm</string>
    <string name="empty_cate_wallet">Vui lòng nhập đầy đủ thông tin.</string>
    <string name="empty_cate_wallets">Vui lòng chọn danh mục và chọn ví.</string>
    <string name="empty_cate">Vui lòng chọn danh mục.</string>
    <string name="all_wallet">Tất cả các ví</string>
    <string name="money_use">Đã chi: </string>
    <string name="money_rest">Còn lại: </string>
    <string name="transfer_money">Chuyển</string>
    <string name="transfer_again_error">Chuyển tiền không thể giao dịch lại.</string>
    <string name="transfer_edit_error">Chuyển tiền không thể chỉnh sửa.</string>
    <string name="fast_money_error">Số tiền trong ví không đủ cho giao dịch.</string>
    <string name="wallet_system_sh">Sinh hoạt</string>
    <string name="wallet_system_other">Khác</string>
    <string name="cate_system_transfer">Chuyển tiền</string>
    <string name="cate_system_savings">Tiết kiệm</string>
    <string name="remind_title">Nhắc nhở</string>
    <string name="remind_message">Bạn đã đặt thông báo cho giao dịch</string>
    <string name="alarm_detail">Chạm để xem chi tiết.</string>
    <string name="repeat_title">Lặp lại</string>
    <string name="repeat_message">Giao dịch của bạn đã được thêm tự động theo chu kỳ lặp lại. Thông báo cho giao dịch</string>
    <string name="repeat_title_budget">Cảnh báo</string>
    <string name="repeat_message_budget">Giao dịch của bạn đã vượt quá ngân sách cho phép</string>
    <string name="repeat_budget">Chi tiêu kết thúc</string>
    <string name="repeat_mess_budget">Chi tiêu của bạn đã kết thúc vào ngày hôm nay. Thông báo cho chi tiêu</string>
    <string name="first_title">Chào mừng bạn đến với Money Tracker</string>
    <string name="first_message">Cảm ơn bạn đã sử dụng ứng dụng quản lý tài chính Money Tracker của chúng tôi.
        Hy vọng Money Tracker sẽ mang đến cho bạn cảm giác hài lòng và sự tin tưởng trong thời gian sử dụng.
    </string>
    <string name="percent">Chọn % khoản thu</string>
    <string name="percents">Phần trăm</string>
    <string name="times">Khoảng thời gian</string>
    <string name="time_select">Chọn thời gian</string>
    <string name="time_display">Thời gian: </string>
    <string name="title_fingerprint">Cảm biến vân tay cho Money Tracker</string>
    <string name="desc_fingerprint">Vui lòng đặt ngón tay của bạn trên máy quét để xác thực danh tính của bạn</string>
    <string name="subtitle_fingerprint">Xác thực danh tính của bạn</string>
    <string name="use_pass">Thoát</string>
    <string name="not_support">Thiết bị của bạn không được hỗ trợ cảm biến vân tay.</string>
    <string name="isActive_fingerprint">Thiết bị của bạn chưa kích hoạt cảm biến vân tay.</string>
    <string name="year">Năm</string>
    <string name="month">Tháng</string>
    <string name="mes_logout">Bạn chắc chắn muốn đăng xuất?</string>
    <string name="mes_logout_info">Bạn chắc chắn muốn thoát tài khoản?</string>
    <string name="mes_change_pass">Bạn chắc chắn muốn đổi mật khẩu?</string>
    <string name="empty_info">Vui lòng nhập đầy đủ thông tin.</string>
    <string name="email_exist">Email đã được đăng ký.</string>
    <string name="success_signup">Đăng ký tài khoản thành công.</string>
    <string name="unsuccess_signup">Đăng ký tài khoản không thành công.</string>
    <string name="regex_email">Email không hợp lệ.</string>
    <string name="regex_password">Mật khẩu phải chứa ít nhất 6 kí tự.</string>
    <string name="regex_name">Tên không hợp lệ.</string>
    <string name="success_edit_info">Cập nhật thông tin thành công.</string>
    <string name="unsuccess_edit_info">Cập nhật thông tin không thành công.</string>
    <string name="confirm_edit_info">Bạn chắc chắn muốn cập nhật thông tin?</string>
    <string name="input_password">Vui lòng nhập mật khẩu.</string>
    <string name="email_incorrect">Email không chính xác.</string>
    <string name="password_incorrect">Mật khẩu không chính xác.</string>
    <string name="change_pass_success">Đổi mật khẩu thành công.</string>
    <string name="change_pass_empty_old">Vui lòng nhập mật khẩu cũ.</string>
    <string name="change_pass_empty_new">Vui lòng nhập mật khẩu mới.</string>
    <string name="success_wallet_add">Thêm ví thành công.</string>
    <string name="name_exist_wallet_add">Tên ví đã tồn tại.</string>
    <string name="success_wallet_transfer">Chuyển tiền thành công.</string>
    <string name="onfirm_wallet_transfer">Bạn chắc chắn muốn chuyển tiền?</string>
    <string name="note_wallet_transfer">Chuyển tiền đến ví</string>
    <string name="success_cate_add">Thêm danh mục thành công.</string>
    <string name="name_exist_cate_add">Tên danh mục đã tồn tại.</string>
    <string name="icon_empty_cate_add">Vui lòng chọn biểu tượng.</string>
    <string name="wallet_empty_cate_add">Vui lòng chọn ví.</string>
    <string name="confirm_wallet_add">Bạn chắc chắn muốn thêm ví này?</string>
    <string name="confirm_cate_add">Bạn chắc chắn muốn thêm danh mục này?</string>
    <string name="success_category_edit">Cập nhật danh mục thành công.</string>
    <string name="unsuccess_category_edit">Cập nhật danh mục không thành công.</string>
    <string name="confirm_category_edit">Bạn chắc chắn muốn cập nhật danh mục này?</string>
    <string name="mes_delete_category">Bạn chắc chắn muốn xóa danh mục này?</string>
    <string name="delete_category_success">Xóa danh mục thành công.</string>
    <string name="mes_delete_wallet">Các thông tin giao dịch trong ví cá nhân này sẽ bị xóa. Bạn chắc chắn muốn xóa ví này?</string>
    <string name="delete_wallet_success">Xóa ví thành công.</string>
    <string name="success_wallet_edit">Cập nhật ví thành công.</string>
    <string name="unsuccess_wallet_edit">Cập nhật ví không thành công.</string>
    <string name="confirm_wallet_edit">Bạn chắc chắn muốn cập nhật ví này?</string>
    <string name="mes_delete_event">Bạn chắc chắn muốn xóa sự kiện này?</string>
    <string name="delete_event_success">Xóa sự kiện thành công.</string>
    <string name="mes_delete_savings">Bạn chắc chắn muốn xóa tiết kiệm này?</string>
    <string name="delete_savings_success">Xóa tiết kiệm thành công.</string>
    <string name="mes_delete_trans">Bạn chắc chắn muốn xóa giao dịch này?</string>
    <string name="delete_trans_success">Xóa giao dịch thành công.</string>
    <string name="mes_delete_budgets">Bạn chắc chắn muốn xóa chi tiêu này?</string>
    <string name="delete_budgets_success">Xóa chi tiêu thành công.</string>
    <string name="login">Đăng nhập</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="sign_up">Tạo tài khoản</string>
    <string name="forgot_pass">Quên mật khẩu?</string>
    <string name="create_account">Tạo tài khoản</string>
    <string name="name">Tên</string>
    <string name="choose_image">Chọn ảnh đại diện:</string>
    <string name="change_password">Thay đổi mật khẩu</string>
    <string name="old_password">Mật khẩu cũ</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="change_passwordd">Thay đổi</string>
    <string name="edit_information">Chỉnh sửa thông tin</string>
    <string name="update">Cập nhật</string>
    <string name="forgot_pass_info">Nhập địa chỉ email mà bạn đăng ký để chúng tôi gửi email hướng dẫn lấy lại mật khẩu.</string>
    <string name="send">Gửi</string>
    <string name="forgot_password">Quên mật khẩu</string>
    <string name="empty_email">Vui lòng nhập email.</string>
    <string name="subject">Quên mật khẩu Money Tracker</string>
    <string name="message">Bạn vừa yêu cầu đổi mật khẩu cho tài khoản Money Tracker với địa chỉ email này. Bạn có thể dùng mã này để đăng nhập và tiến hành thay đổi mật khẩu của bạn. Mã đăng nhập của bạn là:</string>
    <string name="exit_account">Thoát tài khoản</string>
    <string name="hello">Xin chào!</string>
    <string name="fingerprint">Mở khóa bằng vân tay</string>
    <string name="trans_book">Giao dịch</string>
    <string name="report">Báo cáo</string>
    <string name="speed">Giao dịch nhanh</string>
    <string name="add_trans">Thêm giao dịch</string>
    <string name="planning">Lập kế hoạch</string>
    <string name="personal">Cá nhân</string>
    <string name="expense_revenue">Khoản thu &amp; Khoản chi</string>
    <string name="symmetrical_money">Cân đối</string>
    <string name="chart">Biểu đồ thống kê</string>
    <string name="one_touch">Giao dịch nhanh với 1 chạm</string>
    <string name="check_fast">Kiểm tra</string>
    <string name="details_fast">Thông tin</string>
    <string name="filter_dialog">Bạn muốn lọc theo</string>
    <string name="repeat_dialog">Bạn muốn lặp lại theo</string>
    <string name="reports">Xem báo cáo cho giao đoạn này</string>
    <string name="save">Lưu</string>
    <string name="category">Chọn danh mục</string>
    <string name="note">Thêm ghi chú (nếu có)</string>
    <string name="date">Hôm nay</string>
    <string name="wallet">Chọn ví</string>
    <string name="event">Chọn sự kiện</string>
    <string name="saving">Chọn tiết kiệm</string>
    <string name="remind">Đặt nhắc nhở</string>
    <string name="remind_error">Bạn phải chọn thời gian trong tương lai.</string>
    <string name="repeat">Lặp lại giao dịch này</string>
    <string name="fast">Đánh dấu giao dịch nhanh</string>
    <string name="confirm_add_trans">Bạn chắc chắn muốn thêm giao dịch?</string>
    <string name="success_add_trans">Thêm giao dịch thành công.</string>
    <string name="notice_choose_savings">(*) Khi giao dịch là tiết kiệm bạn sẽ không cần chọn ví cá nhân và ngược lại.</string>
    <string name="notice_choose_event_savings">(*) Bạn có thể chọn cả sự kiện và tiết kiệm trong cùng một giao dịch.</string>
    <string name="note_one_touch_fast">(*) Bạn có thể thêm giao dịch ngay lập tức qua 1 thao tác chạm vào danh sách giao dịch.</string>
    <string name="note_default_fast">(*) Bạn có thể nhấn giữ lâu vào danh sách giao dịch để thực hiện các chức năng mở rộng.</string>
    <string name="trans_edit">Chỉnh sửa giao dịch</string>
    <string name="success_trans_edit">Cập nhật giao dịch thành công.</string>
    <string name="confirm_trans_edit">Bạn chắc chắn muốn cập nhật giao dịch này?</string>
    <string name="budget">Chi tiêu</string>
    <string name="budget_info">Tạo chi tiêu cho từng nhóm thời gian hoặc cho cả ví cá nhân, giúp quản lý chi tiêu hằng ngày.</string>
    <string name="events">Sự kiện</string>
    <string name="events_info">Theo dõi chi tiêu cho một sự kiện.</string>
    <string name="savings">Tiết kiệm</string>
    <string name="savings_info">Tiết kiệm cho một sự kiện, món đồ, kế hoạch tương lai,...</string>
    <string name="eventt">Sự kiện</string>
    <string name="no_eventt">Không có sự kiện nào</string>
    <string name="trans_money_go">Đi đến > Chuyển tiền</string>
    <string name="trans_money_change">Đổi ví khác</string>
    <string name="invalid_money_old">Số tiền trong ví không đủ cho giao dịch này. Bạn nên đổi ví khác hoặc chuyển tiền để tiếp tục giao dịch.</string>
    <string name="category_name">Tên nhóm</string>
    <string name="recharge_money">Khoản thu</string>
    <string name="spend_money">Khoản chi</string>
    <string name="category_edit">Chỉnh sửa danh mục</string>
    <string name="delete_cate">Xóa danh mục này</string>
</resources>