<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/trans_book"
        android:icon="@drawable/ic_baseline_done_all_24"
        android:title="@string/trans_book"
        />

    <item
        android:id="@+id/speed"
        android:icon="@drawable/ic_baseline_more_time_24"
        android:title="@string/speed" />

    <item
        android:id="@+id/add_trans"
        android:enabled="false"
        android:title="" />

    <item
        android:id="@+id/planning"
        android:icon="@drawable/ic_baseline_event_available_24"
        android:title="@string/planning" />

    <item
        android:id="@+id/personal"
        android:icon="@drawable/ic_baseline_account_box_24"
        android:title="@string/personal" />

</menu>
