<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:background="@color/colorWhite"
    android:fillViewport="false">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/di18dp"
        android:paddingTop="@dimen/di18dp"
        android:paddingRight="@dimen/di18dp"
        android:background="@color/colorWhite"
        tools:context=".controllers.mains.MainActivity">

        <ImageButton
            android:id="@+id/buttonReturn_signup"
            android:layout_width="@dimen/di35dp"
            android:layout_height="@dimen/di35dp"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:background="?android:attr/selectableItemBackground"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/di15dp"
            android:gravity="center"
            android:text="@string/create_account"
            android:textSize="@dimen/di25dp"
            android:textStyle="bold"
            android:textColor="@color/colorDarkGreen"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/di20dp"
            android:paddingRight="@dimen/di20dp">

            <EditText
                android:id="@+id/editTextEmail_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:layout_marginBottom="@dimen/di15dp"
                android:ems="10"
                android:textColor="@color/colorBlack"
                android:inputType="textEmailAddress"/>

            <EditText
                android:id="@+id/editTextPassword_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:ems="10"
                android:textColor="@color/colorBlack"
                android:layout_marginBottom="@dimen/di15dp"
                android:inputType="textPassword"
                android:drawableRight="@drawable/ic_baseline_visibility_24"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/di20dp"
            android:paddingRight="@dimen/di20dp">

            <EditText
                android:id="@+id/editTextName_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:textColor="@color/colorBlack"
                android:layout_marginBottom="@dimen/di15dp"
                android:ems="20" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/di40dp"
                android:layout_marginTop="@dimen/di20dp"
                android:background="@drawable/border_radius">

                <Button
                    android:id="@+id/buttonSignUp_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textColor="@color/colorWhite"
                    android:layout_marginLeft="@dimen/di10dp"
                    android:layout_marginRight="@dimen/di10dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:textSize="@dimen/di15dp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>